4 April 2007
+ Added German translation
+ Updated language functions.

Version 1.1.1
------------------------------------------------------------------
19 March 2007
+ Fixed bug preventing 3rd tier link display.

16 March 2007
+ Added ability to pin any page for addition into the menu.

13 March 2007
+ Changed template so IE would hide the menu
+ Changed the menu margins so both FF and IE could access the menu.

5 March 2007
+ Changed control panel icon

Version 1.1.0
------------------------------------------------------------------
19 February 2007
+ Reduced translate links
+ Removed register.php and unregister parameter from boost.php

14 February 2007
+ Removed references from object constructors
+ Removed a unneeded double urlencode and a urldecode

6 February 2007
+ Default menu is created on install.

2 February 2007
+ Links missing &amp; were causing validation errors. Fixed.
+ Fixed missing quote in config.php links
+ Updated files: conf/config.php

9 January 2007
+ Added pinLink function for developers to add a link to any menu.
+ Added mechanism for adding a pinned link.
+ Updated files: conf/config.php, templates/links/link.tpl,
  templates/menu_layout/basic.tpl, img/attach.png,
  templates/admin/pin_list.tpl

27 November 2006
+ Added a color : inherit to menu's style sheet to conform with css
  standards.

Version 1.0.4
-------------------------------------------------------------------

3 November 2006
+ Updated files - templates/links/link.tpl,
                  templates/menu_layout/basic.tpl
+ Renamed offsite links to just site links to avoid confusion
+ If you edit a link that isn't keyed, you can now change the url
+ setUrl function changed to figure url without local parameter
  setting

2 November 2006
+ Bug #1588771 - Fixed admin page not working with menu

1 November 2006
+ updated files templates/admin/offsite.tpl
+ Added cancel button to offsite template

Version 1.0.1
-------------------------------------------------------------------